--- a/Covid19_Detection_Chest_X_rays.ipynb
+++ b/Covid19_Detection_Chest_X_rays.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPHDA4zYqfGY1DH4gcXAeX+",
+      "authorship_tag": "ABX9TyMI7opAZpxYbK0lQ17mIEMk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6248,14 +6248,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "| Model              | Accuracy Train (%) | Accuracy Test (%) | Precision | Recall | F1-Score | Overfitting(Y/N) |\n",
-        "|--------------------|--------------------|--------------------|-----------|--------|----------|------------------|\n",
-        "| Basic_CNN          | 44.292             | 42.424             | 0.498     | 0.424  | 0.341    | N                |\n",
-        "| Deep_CNN           | 35.160             | 39.394             | 0.223     | 0.394  | 0.275    | N                |\n",
-        "| VGG16              | 100.000            | 95.455             | 0.960     | 0.955  | 0.954    | N                |\n",
-        "| ResNet50           | 57.078             | 57.576             | 0.410     | 0.576  | 0.478    | N                |\n",
-        "| VGG16_data_aug     | 99.543             | 93.939             | 0.949     | 0.939  | 0.939    | N                |\n",
-        "| ResNet50_data_aug  | 68.950             | 65.152             | 0.522     | 0.652  | 0.558    | N                |\n"
+        "| Model             | Accuracy Train (%) | Accuracy Test (%) | Precision | Recall | F1-Score | Overfitting (Y/N) |\n",
+        "|-------------------|--------------------|--------------------|-----------|--------|----------|-------------------|\n",
+        "| Basic_CNN         | 44.292             | 39.394             | 0.155     | 0.394  | 0.223    | N                 |\n",
+        "| Deep_CNN          | 30.137             | 33.333             | 0.257     | 0.333  | 0.200    | N                 |\n",
+        "| VGG16             | 100.000            | 93.939             | 0.949     | 0.939  | 0.939    | N                 |\n",
+        "| ResNet50          | 68.950             | 71.212             | 0.812     | 0.712  | 0.613    | N                 |\n",
+        "| VGG16_data_aug    | 100.000            | 90.909             | 0.930     | 0.909  | 0.907    | N                 |\n",
+        "| ResNet50_data_aug | 65.297             | 66.667             | 0.681     | 0.667  | 0.592    | N                 |\n",
+        "             |\n"
       ],
       "metadata": {
         "id": "pCO17D6-aw12"
